[project]
name = "datamatrix-inserter"
version = "0.1.0"
description = "Инструмент для вставки DataMatrix кодов в изображения"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pylibdmtx>=0.1.10",
    "looseversion>=1.3.0",  # Добавьте эту строку
    "scipy>=1.17.1",
    "packaging>=26.0",
    "setuptools>=82.0.0",
]

[project.scripts]
datamatrix-inserter = "datamatrix_inserter:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["datamatrix_inserter*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[project.urls]
Homepage = "https://github.com/yourusername/datamatrix-inserter"
Repository = "https://github.com/yourusername/datamatrix-inserter.git"
